--- a/blocks/image-list/image-list.css
+++ b/blocks/image-list/image-list.css
@@ -1,1 +1,31 @@
+.image-list > ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(278px, 1fr));
+  grid-gap: 16px;
+}
 
+.image-list > ul > li {
+  border: 1px solid var(--dark-color);
+  background-color: var(--background-color);
+}
+
+.image-list .cards-card-body {
+  margin: 16px;
+}
+
+.image-list .cards-card-image {
+  line-height: 0;
+}
+
+.image-list .cards-card-body > *:first-child {
+  margin-top: 0;
+}
+
+.image-list > ul > li img {
+  width: 100%;
+  aspect-ratio: 4 / 3;
+  object-fit: cover;
+}
