--- a/blocks/adventures/adventures.css
+++ b/blocks/adventures/adventures.css
@@ -36,4 +36,12 @@
   padding: 5px;
   display: inline-flex;
   border: 10px solid black;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.adventures .adventure-image-card {
+  position: relative;
+  text-align: center;
 }
