--- a/blocks/teaser/teaser.css
+++ b/blocks/teaser/teaser.css
@@ -11,7 +11,7 @@
   margin: 0;
 }
 
-.block.teaser .bg ing {
+.block.teaser .bg img {
     display: block;
     width: 100%;
     max-height: 400px;
